"""
RUFAS: Ruminant Farm Systems Model

File name: base_handler.py

Description:

Author(s):  William Donovan, wmdonovan@wisc.edu
            Yunus Mohammed, ymm26@cornell.edu 
"""
from dataclasses import asdict
from pprint import pprint

from RUFAS.routines.animal.life_cycle.cow import Cow
from RUFAS.routines.manure_management.data_models.constants import ManureManagementConstants as Constants
from RUFAS.routines.manure_management.data_models.simple_pen import SimplePen
from RUFAS.routines.manure_management.manure_handlers.bedding.bedding_enum import BeddingEnum
from RUFAS.routines.manure_management.manure_handlers.bedding.bedding_manager import BeddingManager
from RUFAS.routines.manure_management.manure_handlers.manure_handler_init_data import ManureHandlerInitData
from RUFAS.routines.manure_management.manure_handlers.manure_handler_variables import ManureHandlerVariables
from RUFAS.routines.manure_management.manure_handlers.milking_center import MilkingCenter
from RUFAS.routines.manure_management.sand_separators.sand_separation_lane import SandSeparationLane


class BaseManureHandler:
    """
    Description
    ------------

    Attributes
    ----------

    """

    def __init__(self,
                 pen: SimplePen,
                 handler_data: ManureHandlerInitData):
        # self.pen = pen
        self.handler_init_data = handler_data
        self.sand_lane = None

        self.bedding_manager = BeddingManager.get_instance(pen.bedding_type)
        self.num_animals = len(pen.animals_in_pen)
        self.milking_center = MilkingCenter()

        self.daily_vars = ManureHandlerVariables()
        self.daily_output = None

        self.last_daily_output = None

    # TODO: unused
    def init_sand_lane(self, sand_lane_data):
        if self.bedding_manager.bedding_enum is BeddingEnum.SAND:
            self.sand_lane = SandSeparationLane(sand_lane_data)

    def reset_daily_variables(self):
        self.daily_vars = ManureHandlerVariables()
        self.flush_water_volume = 0.0

    def update(self, pen: SimplePen) -> ManureHandlerVariables:
        """
        Description:
            Calls functions to calculate nutrient losses and transformations during
            manure handling.
            "pseudocode_manure_management" MS.3
        """
        # self.update_daily_variables(pen)
        # self.flush_water()
        # self.N_loss()
        # self.P_loss()
        # self.K_loss()
        # self.solids()
        # if self.bedding_manager.bedding_enum is BeddingEnum.SAND:
        #     self.sand_lane.sand_lane()
        # self.CH4_effluent()
        # self.WIP_WOP()

        daily_output = ManureHandlerVariables(
            raw_manure=pen.manure_mass,
            urea=pen.manure.U,
            TAN_s=pen.manure.TAN_s,
            manure_nitrogen=pen.manure.MN,
            TSd=pen.manure.TSd,
            VSd=pen.manure.VSd,
            VSnd=pen.manure.VSnd,
            p_excrt_manure=pen.manure.p_excrt_manure,
            K_manure=pen.manure.K_manure,
            cleaning_water=self.cleaning_water_volume_in_main_barn(),
            tot_bedding_mass=self.total_bedding_mass(),
            tot_water_volume_in_milking_center=self.total_water_volume_used_in_milking_center(pen)
        )
        self.last_daily_output = daily_output
        return daily_output


    def update_daily_variables(self, pen: SimplePen):
        self.daily_vars += ManureHandlerVariables.get_instance_from_pen(pen)

    def cleaning_water_volume_in_main_barn(self) -> float:
        """
        Description:
            Calculates Flush Water Volume and passes it to the associated separa
            "pseudocode_manure_management" MS.3.A
        """
        return self.num_animals * self.handler_init_data.water_use_rate  # liters

    def total_bedding_mass(self) -> float:
        return self.num_animals * self.bedding_manager.bedding_mass_per_day  # kg/day

    def total_bedding_volume(self) -> float:
        return self.total_bedding_mass() / self.bedding_manager.bedding.density  # m^3/day

    # Manure handler's specific output
    def final_daily_mass(self, pen: SimplePen) -> float:
        return sum([
            pen.manure_mass,  # kg. Make sure no double counting
            self.cleaning_water_volume_in_main_barn(),  # liters, 1L = 1kg
            self.total_bedding_mass(),  # kg
            self.total_water_volume_used_in_milking_center(pen),  # liters, 1L = 1kg

            pen.manure.U,  # g/L
            pen.manure.TAN_s,  # g/L
            pen.manure.MN,  # kg
            pen.manure.TSd,  # kg
            pen.manure.VSd,  # kg
            pen.manure.VSnd,  # kg
            pen.manure.p_excrt_manure,  # kg
            pen.manure.K_manure  # kg
        ])

    def final_daily_volume(self, pen: SimplePen) -> float:
        return sum([
            pen.manure_volume,  # m^3
            self.cleaning_water_volume_in_main_barn() * Constants.LITERS_TO_CUBIC_METERS,  # m^3
            self.total_bedding_volume(),  # m^3
            self.total_water_volume_used_in_milking_center(pen) * Constants.LITERS_TO_CUBIC_METERS,  # m^3

            pen.manure.U,  # g/L
            pen.manure.TAN_s,  # g/L
            pen.manure.MN,  # kg
            pen.manure.TSd,  # kg
            pen.manure.VSd,  # kg
            pen.manure.VSnd,  # kg
            pen.manure.p_excrt_manure,  # kg
            pen.manure.K_manure  # kg
        ])

    def wash_water_volume_used_in_holding_area(self) -> float:
        return self.num_animals * MilkingCenter.wash_water_use_rate  # liters

    def fresh_water_volume_used_for_milking(self) -> float:
        return self.num_animals * MilkingCenter.fresh_water_use_rate  # liters

    def total_water_volume_used_in_milking_center(self, pen: SimplePen) -> float:
        pprint(list(pen.classes_in_pen))
        if 'Cow' in pen.classes_in_pen:
            return self.wash_water_volume_used_in_holding_area() + \
                   self.fresh_water_volume_used_for_milking()  # liters
        return 0.0

    def manure_mass_deposited_in_milking_center(self, pen: SimplePen) -> float:
        if Cow in pen.classes_in_pen:
            percent_time_spent = self.milking_center.total_percent_of_day_spent_in_milking_center
            return pen.manure_mass * percent_time_spent / 100
        return 0.0

    def manure_volume_deposited_in_milking_center(self, pen: SimplePen) -> float:
        return self.manure_mass_deposited_in_milking_center(pen) / pen.manure_density

    def N_loss(self):
        """
        Description:
            Updates Nitrogen mass in the reception_pit from excreted manure
            "pseudocode_manure_management" MS.3.B
        """

        # self.reception_pit.N = self.daily_vars.N_excreted
        pass

    def P_loss(self):
        """
        Description:
            Updates Phosphorus mass in the reception_pit from excreted manure
    "       pseudocode_manure_management" MS.3.C
        """

        # self.reception_pit.P = self.daily_vars.P_excreted
        pass

    def K_loss(self):
        """
        Description:
            Updates Potassium mass in the reception_pit from excreted manure
            "pseudocode_manure_management" MS.3.D
        """

        # self.reception_pit.K = self.daily_vars.K_excreted
        pass

    def solids(self):
        """
        Description:
            Updates Total and Volatile Solids in the reception_pit from excreted manure
            "pseudocode_manure_management" MS.3.E
        """
        # self.daily_vars.TS_loss = self.flush_water_volume * Constants.TS_loss_perc
        # self.daily_vars.VS_loss = self.daily_vars.TS_loss * Constants.VS_loss_perc

        # self.reception_pit.TS += self.daily_vars.TS_loss
        # self.reception_pit.VS += self.daily_vars.VS_loss
        pass

    # TODO: move to sand lane class
    # def sand_lane(self):
    #     """
    #     Description:
    #         Sand separation lane. Method only called for sand bedding.
    #     """
    #     sand_lane = self.sand_lane
    #     sand_lane.sand_washed_with_water = self.bedding_mass_per_day  # kg/day
    #     sand_lane.sand_mass_separated = sand_lane.sand_separation_efficiency * \
    #                                     sand_lane.sand_washed_with_water  # kg/day
    #     sand_lane.sand_volume_separated = sand_lane.sand_mass_separated / self.bedding_density  # m3/day

    def CH4_effluent(self):
        # self.reception_pit.CH4 += self.daily_vars.CH4
        pass

    def WIP_WOP(self):
        # self.reception_pit.WIP += self.daily_vars.WIP
        # self.reception_pit.WOP += self.daily_vars.WOP
        pass
