---
title: "Class diagram for manure handler classes"
---
classDiagram
    direction RL
    BaseManureHandler <|-- FlushSystem : derived from
    BaseManureHandler <|-- ManualScraping
    BaseManureHandler <|-- AlleyScraper
    BaseManureHandler <-- GasEmissions : used by daily_update()
    ManureHandlerFactory --> DefaultManureHandlerConfigFactory : calls when no custom inputs
    DefaultManureHandlerConfigFactory --> ManureHandlerConfig : creates
    ManureHandlerFactory --> BaseManureHandler : creates
    ManureHandlerFactory --> ManureHandlerType : maps each type to a subclass
    class ManureHandlerType {
        <<enumeration>>
        FLUSH_SYSTEM
        MANUAL_SCRAPING
        ALLEY_SCRAPER
        DEFAULT = FLUSH_SYSTEM
    }

    class BaseManureHandler {
        +weather: Weather
        +time: Time
        +config: ManureHandlerConfig
        +milking_parlor: MilkingParlor
        +daily_update() ManureHandlerDailyOutput
    }

    class FlushSystem {
        +daily_update() ManureHandlerDailyOutput
    }

    class ManualScraping {
        +daily_update() ManureHandlerDailyOutput
    }

    class AlleyScraper {
        +daily_update() ManureHandlerDailyOutput
    }

    class GasEmissions {
        +calc_housing_methane_emission() float
        +calc_housing_carbon_dioxide_emission() float
        +calc_housing_nitrous_oxide_emission() float
        +calc_housing_ammonia_emission() float
    }

    class ManureHandlerConfig {
        +cleaning_water_use_rate: float
        +...
    }

    class DefaultManureHandlerConfigFactory {
        +get_instance() ManureHandlerConfig
    }

    class ManureHandlerFactory {
        +get_instance() BaseManureHandler
    }